Bug 1556612: Hardcode considering this an upgrade if the last build to run was run in safe mode. r=froydnj a=jcristau

When safe mode runs it writes out "Safe Mode" as the compatibility version (bug
1556831). Due to bug 1556832 and bug 1556829 this makes us think that the next
run is a downgrade.

This is the simplest possible fix that should be totally safe to upload to
release.

Differential Revision: https://phabricator.services.mozilla.com/D33698